--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">AMST7</string>
+    <string name="usuario">Usuario</string>
+    <string name="clave">Contraseña</string>
+    <string name="ingresar">Ingresar</string>
+    <string name="crearCuenta">Crear una cuenta</string>
+    <string name="registrarse">Registrarse</string>
+    <string name="categorias">Categorías</string>
+    <string name="categoriasdesc">Observe los libros según la categoría que prefiera</string>
+    <string name="inicio">Inicio</string>
+    <string name="perfil">Perfil</string>
+    <string name="formulario">Formulario</string>
+    <string name="nombres">Nombres</string>
+    <string name="apellidos">Apellidos</string>
+    <string name="correo">Correo electrónico</string>
+    <string name="celular">Celular</string>
+    <string name="favorito">Favorito</string>
+    <string name="regresar">Regresar</string>
+    <string name="email">Correo</string>
+    <string name="lbtitle">Libros</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
